licenzies page added header footer

--- a/pages/licenzies.html
+++ b/pages/licenzies.html
@@ -101,9 +101,7 @@
 
 <!--FOOTER-->
 		<footer class="block-footer">
-
 			<div class="site-wrap">
-
 				<nav class="footer-nav">
 					<ul class="footer-list unstyle-list">
 						<li class="footer-list-item"><a class="footer-list-link" href="">Пластическая хирургия</a></li>
@@ -117,17 +115,17 @@
 					</ul>
 				</nav>
 
-				<section class="mailing">
-					<div class="title">Присоединиться к рассылке</div>
-					<form class="form" action="">
-						<input class="email" type="email">
-						<input class="submit" type="submit">
+				<section class="block-mailing">
+					<div class="mailing-title">Присоединиться к рассылке</div>
+					<form class="mailing-form" action="">
+						<input class="mailing-email" type="email">
+						<input class="mailing-submit" type="submit">
 					</form>
 				</section>
 
-				<section class="social"></section>
+				<section class="block-social"></section>
 
-				<section class="copyright">Copyright 2015-2017</section>
+				<section class="block-copyright">Copyright 2015-2017</section>
 			</div>
 
 		</footer>
