added publics page

--- a/pages/publics.html
+++ b/pages/publics.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="">
 	<head>
-		<title>Лицензии</title>
+		<title>Публикации</title>
 
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -60,33 +60,81 @@
 				<div class="site-wrap">
 
 					<div class="block-breadcrumbs">
-						<a class="breadcrumbs-link" href="">Главная</a>	/	<a class="breadcrumbs-link" href="">О клиниках</a>	/	<span>Лицензии</span>
+						<a class="breadcrumbs-link" href="">Главная</a>	/	<a class="breadcrumbs-link" href="">Медиа</a>	/	<span>Публикации</span>
 					</div>
 
-					<section class="block-licenzies">
-						<h2 class="licenzies-title title">Лицензии</h2>
-						<h3 class="licenzies-subtitle">Лицензия на терапевтическую деятельность № ЛО-77-000943</h3>
-						<div class="licenzies-items">
-							<div class="licenzies-item">
-								<img src="../images/lic1.jpg" width="279" height="397" alt="Лицензия1">
+					<section class="block-publics">
+						<div class="publics-title title">Публикации</div>
+						<div class="publics-items">
+							<div class="publics-item">
+								<h3 class="publics-item-title">Эстетика. На игле</h3>
+								<div class="publics-image">
+									<img src="../images/publics1.jpg" width="294" height="393" alt="Журнал">
+								</div>
 							</div>
-							<div class="licenzies-item">
-								<img src="../images/lic1-back.jpg" width="279" height="397" alt="Лицензия1">
+							<div class="publics-item">
+								<h3 class="publics-item-title">Украшение мира</h3>
+								<div class="publics-image">
+									<img src="../images/publics2.jpg" width="294" height="404" alt="Журнал">
+								</div>
+							</div>
+							<div class="publics-item">
+								<h3 class="publics-item-title">Интеллектуальная лазерная липосакция</h3>
+								<div class="publics-image">
+									<img src="../images/publics3.jpg" width="295" height="395" alt="Журнал">
+								</div>
+							</div>
+							<div class="publics-item">
+								<h3 class="publics-item-title">Ger Lift</h3>
+								<div class="publics-image">
+									<img src="../images/publics4.jpg" width="294" height="382" alt="Журнал">
+								</div>
+							</div>
+							<div class="publics-item">
+								<h3 class="publics-item-title">Курс на реформы</h3>
+								<div class="publics-image">
+									<img src="../images/publics5.jpg" width="292" height="391" alt="Журнал">
+								</div>
+							</div>
+							<div class="publics-item">
+								<h3 class="publics-item-title">Как всегда впереди</h3>
+								<div class="publics-image">
+									<img src="../images/publics6.jpg" width="294" height="394" alt="Журнал">
+								</div>
+							</div>
+							<div class="publics-item">
+								<h3 class="publics-item-title">В шоколаде</h3>
+								<div class="publics-image">
+									<img src="../images/publics7.jpg" width="294" height="404" alt="Журнал">
+								</div>
+							</div>
+							<div class="publics-item">
+								<h3 class="publics-item-title">Относитесь к себе хорошо.
+Каждый день.</h3>
+								<div class="publics-image">
+									<img src="../images/publics8.jpg" width="292" height="392" alt="Журнал">
+								</div>
+							</div>
+							<div class="publics-item">
+								<h3 class="publics-item-title">Революционный подход 
+к вопросу совершенства</h3>
+								<div class="publics-image">
+									<img src="../images/publics9.jpg" width="293" height="395" alt="Журнал">
+								</div>
+							</div>
+							<div class="publics-item">
+								<h3 class="publics-item-title">Процедура мгновенной красоты</h3>
+								<div class="publics-image">
+									<img src="../images/publics10.jpg" width="296" height="384" alt="Журнал">
+								</div>
 							</div>
 						</div>
-						<h3 class="licenzies-subtitle">Лицензия на хирургическую деятельность № ЛО-77-003666</h3>
-						<div class="licenzies-item">
-							<div class="licenzies-item">
-								<img src="../images/lic2.jpg" width="279" height="397" alt="Лицензия2">
-							</div>
-							<div class="licenzies-item">
-								<img src="../images/lic2-back.jpg" width="279" height="397" alt="Лицензия2">
-							</div>
-						</div>
-						<h3 class="licenzies-subtitle">Лицензия № ЛО-77-01-007535</h3>
-						<div class="licenzies-items">
-							<div class="licenzies-item">
-								<img src="../images/lic3.jpg" width="279" height="397" alt="Лицензия3">
+
+						<div class="publics-pages">
+							<div class="publics-pages-wrapper">
+								<a class="publics-pages-item active">1</a>
+								<a class="publics-pages-item">2</a>
+								<a class="publics-pages-item">5</a>
 							</div>
 						</div>
 					</section>
@@ -96,9 +144,9 @@
 					<div class="block-star">
 						<div class="star-description">Звезда рекомендует:</div>
 						<div class="star-foto">
-							<img src="../images/star-recommend1.png" width="194" height="194"	alt="Алёна Бабенко">
+							<img src="../images/star-recommend2.png" width="194" height="194"	alt="Алёна Бабенко">
 						</div>
-						<div class="star-name">Алёна Бабенко</div>
+						<div class="star-name">Лариса Вербицкая</div>
 					</div>
 
 					<a class="content-all-services button">Просмотреть все услуги</a>
