added action, contacts pages

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="">
 	<head>
-		<title>Публикации</title>
+		<title>Контакты</title>
 
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -60,97 +60,48 @@
 				<div class="site-wrap">
 
 					<div class="block-breadcrumbs">
-						<a class="breadcrumbs-link" href="">Главная</a>	/	<a class="breadcrumbs-link" href="">Медиа</a>	/	<span>Публикации</span>
+						<a class="breadcrumbs-link" href="">Главная</a>	/	<a class="breadcrumbs-link" href="">О клиниках</a> / <span>Контакты</span>
 					</div>
 
-					<section class="block-publics">
-						<div class="publics-title title">Публикации</div>
-						<div class="publics-items">
-							<div class="publics-item">
-								<h3 class="publics-item-title">Эстетика. На игле</h3>
-								<div class="publics-image">
-									<img src="../images/publics1.jpg" width="294" height="393" alt="Журнал">
-								</div>
+					<section class="block-contacts">
+
+						<div class="contacts-title title">Контакты</div>
+						<div class="contacts-wrapper">
+							<div class="contacts-town-switcher">
+								<div class="contacts-town active">Москва</div>
+								<div class="contacts-town">Екатеринбург</div>
 							</div>
-							<div class="publics-item">
-								<h3 class="publics-item-title">Украшение мира</h3>
-								<div class="publics-image">
-									<img src="../images/publics2.jpg" width="294" height="404" alt="Журнал">
-								</div>
+							<div class="contacts-stations">
+								<div class="contacts-station active">Таганская</div>
+								<div class="contacts-station">Новослободская</div>
+								<div class="contacts-station">Сокол</div>
 							</div>
-							<div class="publics-item">
-								<h3 class="publics-item-title">Интеллектуальная лазерная липосакция</h3>
-								<div class="publics-image">
-									<img src="../images/publics3.jpg" width="295" height="395" alt="Журнал">
-								</div>
+							<div class="contacts-info">
+								<div class="contacts-adress">Пестовский пер., д.5<a href="">Схема</a></div>
+								<div class="contacts-working-hours">пнд-вскр 9:00 - 21:00</div>
+								<div class="contacts-tel">+7 (495) 266 79 57</div>
 							</div>
-							<div class="publics-item">
-								<h3 class="publics-item-title">Ger Lift</h3>
-								<div class="publics-image">
-									<img src="../images/publics4.jpg" width="294" height="382" alt="Журнал">
-								</div>
+							<div class="contacts-map"></div>
+
+							<div class="block-write-us">
+								<div class="write-us-title">Написать директору по развитию</div>
+								<form class="write-us-form clearfix" action="">
+									<input class="write-us-email form-element" type="email" placeholder="Email">
+									<input class="write-us-tel form-element" type="tel" placeholder="Телефон">
+									<input class="write-us-name form-element" type="text" placeholder="Ф.И.О">
+									<textarea class="write-us-text form-element" name="" id="" cols="30" rows="10">Комментарий</textarea>
+									<div class="write-us-tip">* - Обязательные для заполнения поля</div>
+									<input class="write-us-submit" type="submit" value="Отправить">
+								</form>
 							</div>
-							<div class="publics-item">
-								<h3 class="publics-item-title">Курс на реформы</h3>
-								<div class="publics-image">
-									<img src="../images/publics5.jpg" width="292" height="391" alt="Журнал">
-								</div>
-							</div>
-							<div class="publics-item">
-								<h3 class="publics-item-title">Как всегда впереди</h3>
-								<div class="publics-image">
-									<img src="../images/publics6.jpg" width="294" height="394" alt="Журнал">
-								</div>
-							</div>
-							<div class="publics-item">
-								<h3 class="publics-item-title">В шоколаде</h3>
-								<div class="publics-image">
-									<img src="../images/publics7.jpg" width="294" height="404" alt="Журнал">
-								</div>
-							</div>
-							<div class="publics-item">
-								<h3 class="publics-item-title">Относитесь к себе хорошо.
-Каждый день.</h3>
-								<div class="publics-image">
-									<img src="../images/publics8.jpg" width="292" height="392" alt="Журнал">
-								</div>
-							</div>
-							<div class="publics-item">
-								<h3 class="publics-item-title">Революционный подход 
-к вопросу совершенства</h3>
-								<div class="publics-image">
-									<img src="../images/publics9.jpg" width="293" height="395" alt="Журнал">
-								</div>
-							</div>
-							<div class="publics-item">
-								<h3 class="publics-item-title">Процедура мгновенной красоты</h3>
-								<div class="publics-image">
-									<img src="../images/publics10.jpg" width="296" height="384" alt="Журнал">
-								</div>
-							</div>
+
+							<div class="block-clinic-gallery"></div>
+
 						</div>
 
-						<div class="block-pagination">
-							<div class="pagination-wrapper">
-								<a class="pagination-item active">1</a>
-								<a class="pagination-item">2</a>
-								<a class="pagination-item">5</a>
-							</div>
-						</div>
-						
 					</section>
 
 					<a class="content-appointment button">Записаться на приём</a>
-
-					<div class="block-star">
-						<div class="star-description">Звезда рекомендует:</div>
-						<div class="star-foto">
-							<img src="../images/star-recommend2.png" width="194" height="194"	alt="Алёна Бабенко">
-						</div>
-						<div class="star-name">Лариса Вербицкая</div>
-					</div>
-
-					<a class="content-all-services button">Просмотреть все услуги</a>
 
 
 				</div>
@@ -161,7 +112,7 @@
 
 		</main>
 
-<!--FOOTER-->
+		<!--FOOTER-->
 		<footer class="block-footer">
 			<div class="site-wrap">
 				<nav class="footer-nav">
@@ -191,7 +142,7 @@
 			</div>
 
 		</footer>
-<!--FOOTER-END-->
+		<!--FOOTER-END-->
 
 	</body>
 </html>
