added adaptive menu, footer

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -65,7 +65,7 @@
 
 					<section class="block-contacts">
 
-						<div class="contacts-title title">Контакты</div>
+						<h2 class="contacts-title title">Контакты</h2>
 						<div class="contacts-wrapper">
 							<div class="contacts-town-switcher">
 								<div class="contacts-town active">Москва</div>
