--- a/pages/magazine.html
+++ b/pages/magazine.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="">
 	<head>
-		<title>Публикации</title>
+		<title>Журнал</title>
 
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -60,81 +60,90 @@
 				<div class="site-wrap">
 
 					<div class="block-breadcrumbs">
-						<a class="breadcrumbs-link" href="">Главная</a>	/	<a class="breadcrumbs-link" href="">Медиа</a>	/	<span>Публикации</span>
+						<a class="breadcrumbs-link" href="">Главная</a>	/	<a class="breadcrumbs-link" href="">Медиа</a>	/	<br><span>Журнал “Моя реформа”</span>
 					</div>
 
-					<section class="block-publics">
-						<h2 class="publics-title title">Публикации</h2>
-						<div class="publics-items">
-							<div class="publics-item">
-								<h3 class="publics-item-title">Эстетика. На игле</h3>
-								<div class="publics-image">
-									<img src="../images/publics1.jpg" width="294" height="393" alt="Журнал">
+					<section class="block-magazine">
+						<h2 class="magazine-title title">Журнал “Моя реформа”</h2>
+						<p class="magazine-description">Для всех друзей нашей клиники представляем журнал «Моя Реформа»! Вы можете скачать электронную версию</p>
+						<div class="magazine-items">
+							<div class="magazine-item">
+								<h3 class="magazine-item-title clearfix">Весна 2017<a href="">Скачать(2.58 Мб)</a></h3>
+								<div class="magazine-image">
+									<img src="../images/magazine12.jpg" width="295" height="406"	alt="Журнал">
 								</div>
 							</div>
-							<div class="publics-item">
-								<h3 class="publics-item-title">Украшение мира</h3>
-								<div class="publics-image">
-									<img src="../images/publics2.jpg" width="294" height="404" alt="Журнал">
+							<div class="magazine-item">
+								<h3 class="magazine-item-title clearfix">Зима 2016<a href="">Скачать(4.04 Мб)</a></h3>
+								<div class="magazine-image">
+									<img src="../images/magazine13.jpg" width="299" height="406"	alt="Журнал">
 								</div>
 							</div>
-							<div class="publics-item">
-								<h3 class="publics-item-title">Интеллектуальная лазерная липосакция</h3>
-								<div class="publics-image">
-									<img src="../images/publics3.jpg" width="295" height="395" alt="Журнал">
+							<div class="magazine-item">
+								<h3 class="magazine-item-title clearfix">Осень 2016<a href="">Скачать(3.06 Мб)</a></h3>
+								<div class="magazine-image">
+									<img src="../images/magazine1.jpg" width="299" height="406"	alt="Журнал">
 								</div>
 							</div>
-							<div class="publics-item">
-								<h3 class="publics-item-title">Ger Lift</h3>
-								<div class="publics-image">
-									<img src="../images/publics4.jpg" width="294" height="382" alt="Журнал">
+							<div class="magazine-item">
+								<h3 class="magazine-item-title clearfix">Лето 2016<a href="">Скачать(7.89 Мб)</a></h3>
+								<div class="magazine-image">
+									<img src="../images/magazine2.jpg" width="299" height="406"	alt="Журнал">
 								</div>
 							</div>
-							<div class="publics-item">
-								<h3 class="publics-item-title">Курс на реформы</h3>
-								<div class="publics-image">
-									<img src="../images/publics5.jpg" width="292" height="391" alt="Журнал">
+							<div class="magazine-item">
+								<h3 class="magazine-item-title clearfix">Весна 2015<a href="">Скачать(19.84 Мб)</a></h3>
+								<div class="magazine-image">
+									<img src="../images/magazine3.jpg" width="299" height="406"	alt="Журнал">
 								</div>
 							</div>
-							<div class="publics-item">
-								<h3 class="publics-item-title">Как всегда впереди</h3>
-								<div class="publics-image">
-									<img src="../images/publics6.jpg" width="294" height="394" alt="Журнал">
+							<div class="magazine-item">
+								<h3 class="magazine-item-title clearfix">Зима 2014<a href="">Скачать(19.84 Мб)</a></h3>
+								<div class="magazine-image">
+									<img src="../images/magazine4.jpg" width="299" height="406"	alt="Журнал">
 								</div>
 							</div>
-							<div class="publics-item">
-								<h3 class="publics-item-title">В шоколаде</h3>
-								<div class="publics-image">
-									<img src="../images/publics7.jpg" width="294" height="404" alt="Журнал">
+							<div class="magazine-item">
+								<h3 class="magazine-item-title clearfix">Осень 2014<a href="">Скачать(19.84 Мб)</a></h3>
+								<div class="magazine-image">
+									<img src="../images/magazine5.jpg" width="299" height="406"	alt="Журнал">
 								</div>
 							</div>
-							<div class="publics-item">
-								<h3 class="publics-item-title">Относитесь к себе хорошо.
-Каждый день.</h3>
-								<div class="publics-image">
-									<img src="../images/publics8.jpg" width="292" height="392" alt="Журнал">
+							<div class="magazine-item">
+								<h3 class="magazine-item-title clearfix">Лето 2014<a href="">Скачать(19.84 Мб)</a></h3>
+								<div class="magazine-image">
+									<img src="../images/magazine6.jpg" width="299" height="406"	alt="Журнал">
 								</div>
 							</div>
-							<div class="publics-item">
-								<h3 class="publics-item-title">Революционный подход 
-к вопросу совершенства</h3>
-								<div class="publics-image">
-									<img src="../images/publics9.jpg" width="293" height="395" alt="Журнал">
+							<div class="magazine-item">
+								<h3 class="magazine-item-title clearfix">Весна 2014<a href="">Скачать(19.84 Мб)</a></h3>
+								<div class="magazine-image">
+									<img src="../images/magazine7.jpg" width="299" height="406"	alt="Журнал">
 								</div>
 							</div>
-							<div class="publics-item">
-								<h3 class="publics-item-title">Процедура мгновенной красоты</h3>
-								<div class="publics-image">
-									<img src="../images/publics10.jpg" width="296" height="384" alt="Журнал">
+							<div class="magazine-item">
+								<h3 class="magazine-item-title clearfix">Зима 2013<a href="">Скачать(19.84 Мб)</a></h3>
+								<div class="magazine-image">
+									<img src="../images/magazine8.jpg" width="299" height="406"	alt="Журнал">
 								</div>
 							</div>
-						</div>
-
-						<div class="block-pagination">
-							<div class="pagination-wrapper">
-								<a class="pagination-item active">1</a>
-								<a class="pagination-item">2</a>
-								<a class="pagination-item">5</a>
+							<div class="magazine-item">
+								<h3 class="magazine-item-title clearfix">Осень 2013<a href="">Скачать(19.84 Мб)</a></h3>
+								<div class="magazine-image">
+									<img src="../images/magazine9.jpg" width="299" height="406"	alt="Журнал">
+								</div>
+							</div>
+							<div class="magazine-item">
+								<h3 class="magazine-item-title clearfix">Лето 2013<a href="">Скачать(19.84 Мб)</a></h3>
+								<div class="magazine-image">
+									<img src="../images/magazine10.jpg" width="299" height="406"	alt="Журнал">
+								</div>
+							</div>
+							<div class="magazine-item">
+								<h3 class="magazine-item-title clearfix">Весна 2013<a href="">Скачать(19.84 Мб)</a></h3>
+								<div class="magazine-image">
+									<img src="../images/magazine11.jpg" width="299" height="406"	alt="Журнал">
+								</div>
 							</div>
 						</div>
 						
@@ -145,13 +154,12 @@
 					<div class="block-star">
 						<div class="star-description">Звезда рекомендует:</div>
 						<div class="star-foto">
-							<img src="../images/star-recommend2.png" width="194" height="194"	alt="Алёна Бабенко">
+							<img src="../images/star-recommend4.png" width="194" height="194"	alt="Алёна Бабенко">
 						</div>
-						<div class="star-name">Лариса Вербицкая</div>
+						<div class="star-name">Елена Яковлева</div>
 					</div>
 
 					<a class="content-all-services button">Просмотреть все услуги</a>
-
 
 				</div>
 				
