added header&footer on action,contacts,licenzies,magazine,price,publics pages

--- a/pages/price.html
+++ b/pages/price.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="">
 	<head>
-		<title>Контакты</title>
+		<title>Прайс-лист</title>
 
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -71,48 +71,34 @@
 				<div class="site-wrap">
 
 					<div class="block-breadcrumbs">
-						<a class="breadcrumbs-link" href="">Главная</a>	/	<a class="breadcrumbs-link" href="">О клиниках</a> / <span>Контакты</span>
+						<a class="breadcrumbs-link" href="">Главная</a>	/	<a class="breadcrumbs-link" href="">О клиниках</a> / <span>Прайс лист</span>
 					</div>
 
-					<section class="block-contacts">
-
-						<h2 class="contacts-title title">Контакты</h2>
-						<div class="contacts-wrapper">
-							<div class="contacts-town-switcher">
-								<div class="contacts-town active">Москва</div>
-								<div class="contacts-town">Екатеринбург</div>
-							</div>
-							<div class="contacts-stations">
-								<div class="contacts-station active">Таганская</div>
-								<div class="contacts-station">Новослободская</div>
-								<div class="contacts-station">Сокол</div>
-							</div>
-							<div class="contacts-info">
-								<div class="contacts-adress">Пестовский пер., д.5<a href="">Схема</a></div>
-								<div class="contacts-working-hours">пнд-вскр 9:00 - 21:00</div>
-								<div class="contacts-tel">+7 (495) 266 79 57</div>
-							</div>
-							<div class="contacts-map"></div>
-
-							<div class="block-write-us">
-								<div class="write-us-title">Написать директору по развитию</div>
-								<form class="write-us-form clearfix" action="">
-									<input class="write-us-email form-element" type="email" placeholder="Email">
-									<input class="write-us-tel form-element" type="tel" placeholder="Телефон">
-									<input class="write-us-name form-element" type="text" placeholder="Ф.И.О">
-									<textarea class="write-us-text form-element" name="" id="" cols="30" rows="10">Комментарий</textarea>
-									<div class="write-us-tip">* - Обязательные для заполнения поля</div>
-									<input class="write-us-submit" type="submit" value="Отправить">
-								</form>
-							</div>
-
-							<div class="block-clinic-gallery"></div>
-
+					<section class="block-price">
+						<h2 class="price-title title">Прайс-лист</h2>
+						<div class="price-categories">
+							<a class="price-category services" href="">
+								<h2 class="price-category-title">Услуги</h2>
+								<p class="price-description">В данном разделе вы можете ознакомиться с прайс-листом на наши услуги</p>
+							</a>
+							<a class="price-category cosmeceuticals" href="">
+								<h2 class="price-category-title">Космоцевтика</h2>
+								<p class="price-description">В данном разделе вы можете ознакомиться с прайс-листом на космецевтику</p>
+							</a>
 						</div>
-
 					</section>
 
 					<a class="content-appointment button">Записаться на приём</a>
+
+					<div class="block-star">
+						<div class="star-description">Звезда рекомендует:</div>
+						<div class="star-foto">
+							<img src="../images/star-recommend3.png" width="194" height="194"	alt="Алёна Бабенко">
+						</div>
+						<div class="star-name">Ирина Роднина</div>
+					</div>
+
+					<a class="content-all-services button">Просмотреть все услуги</a>
 
 
 				</div>
@@ -166,5 +152,6 @@
 
 		</footer>
 		<!--FOOTER-END-->
+
 	</body>
 </html>
