licenzies, publics, magazine, video, action, price peages is ready

--- a/pages/action.html
+++ b/pages/action.html
@@ -71,7 +71,7 @@
 				<div class="site-wrap">
 
 					<div class="block-breadcrumbs">
-						<a class="breadcrumbs-link" href="">Главная</a>	/	<span>Акции</span>
+						<a class="breadcrumbs-link" href="">Главная</a>	/	<span class="breadcrumbs-current">Акции</span>
 					</div>
 
 					<section class="block-action">
@@ -152,7 +152,7 @@ TriPlex - всего за 49 900 </h3>
 					<a class="content-appointment button">Записаться на приём</a>
 
 					<div class="block-star">
-						<div class="star-description">Звезда рекомендует:</div>
+						<div class="star-description"><span>Звезда рекомендует:</span></div>
 						<div class="star-foto">
 							<img src="../images/star-recommend3.png" width="194" height="194"	alt="Алёна Бабенко">
 						</div>
@@ -191,7 +191,7 @@ TriPlex - всего за 49 900 </h3>
 					<div class="site-wrap">
 							<div class="mailing-title">Присоединиться к рассылке</div>
 							<form class="mailing-form clearfix" action="">
-								<input class="mailing-email form-element" type="email">
+								<input class="mailing-email form-element" type="email" placeholder="Email">
 								<input class="mailing-submit" type="submit">
 							</form>
 					</div>
