--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -144,7 +144,7 @@
 					<div class="site-wrap">
 							<div class="mailing-title">Присоединиться к рассылке</div>
 							<form class="mailing-form clearfix" action="">
-								<input class="mailing-email form-element" type="email">
+								<input class="mailing-email form-element" type="email" placeholder="Email">
 								<input class="mailing-submit" type="submit">
 							</form>
 					</div>
