--- a/pages/licenzies.html
+++ b/pages/licenzies.html
@@ -71,13 +71,14 @@
 				<div class="site-wrap">
 
 					<div class="block-breadcrumbs">
-						<a class="breadcrumbs-link" href="">Главная</a>	/	<a class="breadcrumbs-link" href="">О клиниках</a>	/	<span>Лицензии</span>
+						<a class="breadcrumbs-link" href="">Главная</a>	/	<a class="breadcrumbs-link" href="">О клиниках</a>	/	<span class="breadcrumbs-current">Лицензии</span>
 					</div>
 
 					<section class="block-licenzies">
 						<h2 class="licenzies-title title">Лицензии</h2>
-						<h3 class="licenzies-subtitle">Лицензия на терапевтическую деятельность № ЛО-77-000943</h3>
+
 						<div class="licenzies-items">
+							<h3 class="licenzies-subtitle">Лицензия на терапевтическую деятельность № ЛО-77-000943</h3>
 							<div class="licenzies-item">
 								<img src="../images/lic1.jpg" width="279" height="397" alt="Лицензия1">
 							</div>
@@ -85,8 +86,9 @@
 								<img src="../images/lic1-back.jpg" width="279" height="397" alt="Лицензия1">
 							</div>
 						</div>
-						<h3 class="licenzies-subtitle">Лицензия на хирургическую деятельность № ЛО-77-003666</h3>
-						<div class="licenzies-item">
+
+						<div class="licenzies-items">
+							<h3 class="licenzies-subtitle">Лицензия на хирургическую деятельность № ЛО-77-003666</h3>
 							<div class="licenzies-item">
 								<img src="../images/lic2.jpg" width="279" height="397" alt="Лицензия2">
 							</div>
@@ -94,18 +96,20 @@
 								<img src="../images/lic2-back.jpg" width="279" height="397" alt="Лицензия2">
 							</div>
 						</div>
-						<h3 class="licenzies-subtitle">Лицензия № ЛО-77-01-007535</h3>
+
 						<div class="licenzies-items">
+							<h3 class="licenzies-subtitle">Лицензия № ЛО-77-01-007535</h3>
 							<div class="licenzies-item">
 								<img src="../images/lic3.jpg" width="279" height="397" alt="Лицензия3">
 							</div>
 						</div>
+
 					</section>
 
 					<a class="content-appointment button">Записаться на приём</a>
 
 					<div class="block-star">
-						<div class="star-description">Звезда рекомендует:</div>
+						<div class="star-description"><span>Звезда рекомендует:</span></div>
 						<div class="star-foto">
 							<img src="../images/star-recommend1.png" width="194" height="194"	alt="Алёна Бабенко">
 						</div>
@@ -114,12 +118,10 @@
 
 					<a class="content-all-services button">Просмотреть все услуги</a>
 
-
 				</div>
 				
 				<!--<div class="clear clear-footer"></div>-->
 			</section>
-
 
 		</main>
 
@@ -144,7 +146,7 @@
 					<div class="site-wrap">
 							<div class="mailing-title">Присоединиться к рассылке</div>
 							<form class="mailing-form clearfix" action="">
-								<input class="mailing-email form-element" type="email">
+								<input class="mailing-email form-element" type="email" placeholder="Email">
 								<input class="mailing-submit" type="submit">
 							</form>
 					</div>
