--- a/pages/magazine.html
+++ b/pages/magazine.html
@@ -71,45 +71,47 @@
 				<div class="site-wrap">
 
 					<div class="block-breadcrumbs">
-						<a class="breadcrumbs-link" href="">Главная</a>	/	<a class="breadcrumbs-link" href="">Медиа</a>	/	<br><span>Журнал “Моя реформа”</span>
+						<a class="breadcrumbs-link" href="">Главная</a>	/	<a class="breadcrumbs-link" href="">Медиа</a>	/	<br><span class="breadcrumbs-current clear-m">Журнал “Моя реформа”</span>
 					</div>
 
 					<section class="block-magazine">
 						<h2 class="magazine-title title">Журнал “Моя реформа”</h2>
-						<p class="magazine-description">Для всех друзей нашей клиники представляем журнал «Моя Реформа»! Вы можете скачать электронную версию</p>
+						<div class="magazine-description">
+							<p>Для всех друзей нашей клиники представляем журнал «Моя Реформа»!</p>
+						</div>
 						<div class="magazine-items">
 							<div class="magazine-item">
 								<h3 class="magazine-item-title clearfix">Весна 2017<a href="">Скачать(2.58 Мб)</a></h3>
 								<div class="magazine-image">
-									<img src="../images/magazine12.jpg" width="295" height="406"	alt="Журнал">
+									<img src="../images/magazine12.jpg" width="293" height="404"	alt="Журнал">
 								</div>
 							</div>
 							<div class="magazine-item">
 								<h3 class="magazine-item-title clearfix">Зима 2016<a href="">Скачать(4.04 Мб)</a></h3>
 								<div class="magazine-image">
-									<img src="../images/magazine13.jpg" width="299" height="406"	alt="Журнал">
+									<img src="../images/magazine13.jpg" width="293" height="404"	alt="Журнал">
 								</div>
 							</div>
 							<div class="magazine-item">
 								<h3 class="magazine-item-title clearfix">Осень 2016<a href="">Скачать(3.06 Мб)</a></h3>
 								<div class="magazine-image">
-									<img src="../images/magazine1.jpg" width="299" height="406"	alt="Журнал">
+									<img src="../images/magazine1.jpg" width="295" height="406"	alt="Журнал">
 								</div>
 							</div>
 							<div class="magazine-item">
-								<h3 class="magazine-item-title clearfix">Лето 2016<a href="">Скачать(7.89 Мб)</a></h3>
+								<h3 class="magazine-item-title clearfix">Лето 2016<a href="">Скачать(4.97 Мб)</a></h3>
 								<div class="magazine-image">
 									<img src="../images/magazine2.jpg" width="299" height="406"	alt="Журнал">
 								</div>
 							</div>
 							<div class="magazine-item">
-								<h3 class="magazine-item-title clearfix">Весна 2015<a href="">Скачать(19.84 Мб)</a></h3>
+								<h3 class="magazine-item-title clearfix">Весна 2015<a href="">Скачать(3.59 Мб)</a></h3>
 								<div class="magazine-image">
 									<img src="../images/magazine3.jpg" width="299" height="406"	alt="Журнал">
 								</div>
 							</div>
 							<div class="magazine-item">
-								<h3 class="magazine-item-title clearfix">Зима 2014<a href="">Скачать(19.84 Мб)</a></h3>
+								<h3 class="magazine-item-title clearfix">Зима 2014<a href="">Скачать(7.89 Мб)</a></h3>
 								<div class="magazine-image">
 									<img src="../images/magazine4.jpg" width="299" height="406"	alt="Журнал">
 								</div>
@@ -121,39 +123,39 @@
 								</div>
 							</div>
 							<div class="magazine-item">
-								<h3 class="magazine-item-title clearfix">Лето 2014<a href="">Скачать(19.84 Мб)</a></h3>
+								<h3 class="magazine-item-title clearfix">Лето 2014<a href="">Скачать(11.51 Мб)</a></h3>
 								<div class="magazine-image">
 									<img src="../images/magazine6.jpg" width="299" height="406"	alt="Журнал">
 								</div>
 							</div>
 							<div class="magazine-item">
-								<h3 class="magazine-item-title clearfix">Весна 2014<a href="">Скачать(19.84 Мб)</a></h3>
+								<h3 class="magazine-item-title clearfix">Весна 2014<a href="">Скачать(12.33 Мб)</a></h3>
 								<div class="magazine-image">
-									<img src="../images/magazine7.jpg" width="299" height="406"	alt="Журнал">
+									<img src="../images/magazine7.jpg" width="294" height="416"	alt="Журнал">
 								</div>
 							</div>
 							<div class="magazine-item">
-								<h3 class="magazine-item-title clearfix">Зима 2013<a href="">Скачать(19.84 Мб)</a></h3>
+								<h3 class="magazine-item-title clearfix">Зима 2013<a href="">Скачать(6.99 Мб)</a></h3>
 								<div class="magazine-image">
-									<img src="../images/magazine8.jpg" width="299" height="406"	alt="Журнал">
+									<img src="../images/magazine8.jpg" width="296" height="420"	alt="Журнал">
 								</div>
 							</div>
 							<div class="magazine-item">
-								<h3 class="magazine-item-title clearfix">Осень 2013<a href="">Скачать(19.84 Мб)</a></h3>
+								<h3 class="magazine-item-title clearfix">Осень 2013<a href="">Скачать(1.69 Мб)</a></h3>
 								<div class="magazine-image">
-									<img src="../images/magazine9.jpg" width="299" height="406"	alt="Журнал">
+									<img src="../images/magazine9.jpg" width="297" height="419"	alt="Журнал">
 								</div>
 							</div>
 							<div class="magazine-item">
-								<h3 class="magazine-item-title clearfix">Лето 2013<a href="">Скачать(19.84 Мб)</a></h3>
+								<h3 class="magazine-item-title clearfix">Лето 2013<a href="">Скачать(4.67 Мб)</a></h3>
 								<div class="magazine-image">
-									<img src="../images/magazine10.jpg" width="299" height="406"	alt="Журнал">
+									<img src="../images/magazine10.jpg" width="294" height="415"	alt="Журнал">
 								</div>
 							</div>
 							<div class="magazine-item">
-								<h3 class="magazine-item-title clearfix">Весна 2013<a href="">Скачать(19.84 Мб)</a></h3>
+								<h3 class="magazine-item-title clearfix">Весна 2013<a href="">Скачать(9.21 Мб)</a></h3>
 								<div class="magazine-image">
-									<img src="../images/magazine11.jpg" width="299" height="406"	alt="Журнал">
+									<img src="../images/magazine11.jpg" width="295" height="419"	alt="Журнал">
 								</div>
 							</div>
 						</div>
@@ -163,7 +165,7 @@
 					<a class="content-appointment button">Записаться на приём</a>
 
 					<div class="block-star">
-						<div class="star-description">Звезда рекомендует:</div>
+						<div class="star-description"><span>Звезда рекомендует:</span></div>
 						<div class="star-foto">
 							<img src="../images/star-recommend4.png" width="194" height="194"	alt="Алёна Бабенко">
 						</div>
@@ -201,7 +203,7 @@
 					<div class="site-wrap">
 							<div class="mailing-title">Присоединиться к рассылке</div>
 							<form class="mailing-form clearfix" action="">
-								<input class="mailing-email form-element" type="email">
+								<input class="mailing-email form-element" type="email" placeholder="Email">
 								<input class="mailing-submit" type="submit">
 							</form>
 					</div>
