--- a/pages/priceuslugi.html
+++ b/pages/priceuslugi.html
@@ -68,7 +68,7 @@
 			<!--HEADER-END-->
 
 			<section class="block-content">
-				
+
 				<div class="site-wrap">
 
 					<div class="block-breadcrumbs">
@@ -108,7 +108,7 @@
 					<a class="content-appointment button">Записаться на приём</a>
 
 					<div class="block-star">
-						<div class="star-description">Звезда рекомендует:</div>
+						<div class="star-description"><span>Звезда рекомендует:</span></div>
 						<div class="star-foto">
 							<img src="../images/star-recommend5.png" width="194" height="194"	alt="Алёна Бабенко">
 						</div>
@@ -146,7 +146,7 @@
 					<div class="site-wrap">
 							<div class="mailing-title">Присоединиться к рассылке</div>
 							<form class="mailing-form clearfix" action="">
-								<input class="mailing-email form-element" type="email">
+								<input class="mailing-email form-element" type="email" placeholder="Email">
 								<input class="mailing-submit" type="submit">
 							</form>
 					</div>
