--- a/pages/publics.html
+++ b/pages/publics.html
@@ -71,7 +71,7 @@
 				<div class="site-wrap">
 
 					<div class="block-breadcrumbs">
-						<a class="breadcrumbs-link" href="">Главная</a>	/	<a class="breadcrumbs-link" href="">Медиа</a>	/	<span>Публикации</span>
+						<a class="breadcrumbs-link" href="">Главная</a>	/	<a class="breadcrumbs-link" href="">Медиа</a>	/	<span class="breadcrumbs-current">Публикации</span>
 					</div>
 
 					<section class="block-publics">
@@ -157,7 +157,7 @@
 					<a class="content-appointment button">Записаться на приём</a>
 
 					<div class="block-star">
-						<div class="star-description">Звезда рекомендует:</div>
+						<div class="star-description"><span>Звезда рекомендует:</span></div>
 						<div class="star-foto">
 							<img src="../images/star-recommend2.png" width="194" height="194"	alt="Алёна Бабенко">
 						</div>
@@ -196,7 +196,7 @@
 					<div class="site-wrap">
 							<div class="mailing-title">Присоединиться к рассылке</div>
 							<form class="mailing-form clearfix" action="">
-								<input class="mailing-email form-element" type="email">
+								<input class="mailing-email form-element" type="email" placeholder="Email">
 								<input class="mailing-submit" type="submit">
 							</form>
 					</div>
