--- a/pages/videoarchive.html
+++ b/pages/videoarchive.html
@@ -71,7 +71,7 @@
 				<div class="site-wrap">
 
 					<div class="block-breadcrumbs">
-						<a class="breadcrumbs-link" href="">Главная</a>	/	<a class="breadcrumbs-link" href="">Медиа</a>	/	<br><span>Журнал “Моя реформа”</span>
+						<a class="breadcrumbs-link" href="">Главная</a>	/	<a class="breadcrumbs-link" href="">О клиниках</a>	/	<span class="breadcrumbs-current">Видеоархив</span>
 					</div>
 
 					<section class="block-videoarchive">
@@ -135,7 +135,7 @@
 					<a class="content-appointment button">Записаться на приём</a>
 
 					<div class="block-star">
-						<div class="star-description">Звезда рекомендует:</div>
+						<div class="star-description"><span>Звезда рекомендует:</span></div>
 						<div class="star-foto">
 							<img src="../images/star-recommend4.png" width="194" height="194"	alt="Алёна Бабенко">
 						</div>
@@ -173,7 +173,7 @@
 					<div class="site-wrap">
 							<div class="mailing-title">Присоединиться к рассылке</div>
 							<form class="mailing-form clearfix" action="">
-								<input class="mailing-email form-element" type="email">
+								<input class="mailing-email form-element" type="email" placeholder="Email">
 								<input class="mailing-submit" type="submit">
 							</form>
 					</div>
