--- a/pages/price.html
+++ b/pages/price.html
@@ -71,18 +71,18 @@
 				<div class="site-wrap">
 
 					<div class="block-breadcrumbs">
-						<a class="breadcrumbs-link" href="">Главная</a>	/	<a class="breadcrumbs-link" href="">О клиниках</a> / <span>Прайс лист</span>
+						<a class="breadcrumbs-link" href="">Главная</a>	/	<a class="breadcrumbs-link" href="">О клиниках</a> / <span class="breadcrumbs-current">Прайс лист</span>
 					</div>
 
 					<section class="block-price">
 						<h2 class="price-title title">Прайс-лист</h2>
 						<div class="price-categories">
 							<a class="price-category services" href="">
-								<h2 class="price-category-title">Услуги</h2>
+								<h2 class="price-category-title"><span>Услуги</span></h2>
 								<p class="price-description">В данном разделе вы можете ознакомиться с прайс-листом на наши услуги</p>
 							</a>
 							<a class="price-category cosmeceuticals" href="">
-								<h2 class="price-category-title">Космоцевтика</h2>
+								<h2 class="price-category-title"><span>Космоцевтика</span></h2>
 								<p class="price-description">В данном разделе вы можете ознакомиться с прайс-листом на космецевтику</p>
 							</a>
 						</div>
@@ -91,11 +91,11 @@
 					<a class="content-appointment button">Записаться на приём</a>
 
 					<div class="block-star">
-						<div class="star-description">Звезда рекомендует:</div>
+						<div class="star-description"><span>Звезда рекомендует:</span></div>
 						<div class="star-foto">
-							<img src="../images/star-recommend3.png" width="194" height="194"	alt="Алёна Бабенко">
+							<img src="../images/star-recommend4.png" width="194" height="194"	alt="Алёна Бабенко">
 						</div>
-						<div class="star-name">Ирина Роднина</div>
+						<div class="star-name">Елена Яковлева</div>
 					</div>
 
 					<a class="content-all-services button">Просмотреть все услуги</a>
@@ -130,7 +130,7 @@
 					<div class="site-wrap">
 							<div class="mailing-title">Присоединиться к рассылке</div>
 							<form class="mailing-form clearfix" action="">
-								<input class="mailing-email form-element" type="email">
+								<input class="mailing-email form-element" type="email" placeholder="Email">
 								<input class="mailing-submit" type="submit">
 							</form>
 					</div>
