--- a/pages/priceusluga.html
+++ b/pages/priceusluga.html
@@ -150,7 +150,7 @@ Cynosure, США)</span>
 					<a class="content-appointment button">Записаться на приём</a>
 
 					<div class="block-star">
-						<div class="star-description">Звезда рекомендует:</div>
+						<div class="star-description"><span>Звезда рекомендует:</span></div>
 						<div class="star-foto">
 							<img src="../images/star-recommend3.png" width="194" height="194"	alt="Алёна Бабенко">
 						</div>
@@ -189,7 +189,7 @@ Cynosure, США)</span>
 					<div class="site-wrap">
 							<div class="mailing-title">Присоединиться к рассылке</div>
 							<form class="mailing-form clearfix" action="">
-								<input class="mailing-email form-element" type="email">
+								<input class="mailing-email form-element" type="email" placeholder="Email">
 								<input class="mailing-submit" type="submit">
 							</form>
 					</div>
